data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1996.wast
;; 7. **Test: `br_if` with Unmatched Operand Stack Across Module Boundaries**    - **Constraint Checked:** Check error handling when the stack state expected by `br_if` in an imported function doesn't match the caller module's state.    - **Description:** Call an imported function with `br_if` in a block that expects a certain stack height and operand types, but mismatch on purpose. Expect and check error reporting for stack mismatch.

(assert_invalid
  (module
    (import "env" "externalFunc" (func $externalFunc (result i32)))
    (func $test
      (block (result i32)
        call $externalFunc
        br_if 0 (i32.const 0)
      )
    )
  )
  "type mismatch"
)